fix spacing in medium size screen

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -22,7 +22,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-left: $spacing-unit * 10;
+  margin-left: $spacing-unit * 8;
   li {
     @extend .inline-display;
   }
